--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -77,14 +77,14 @@ These processes are also called "Photopion Production". The thresholds for these
 \begin{equation}\label{eq:Pdisinteg}
     A + \gamma_{CMB} \longrightarrow A-1 + p + n  
 \end{equation}
-The mean free path is still of the order of ~10Mpc.
-Even though, the Pierre Auger Observatory observes a suppression in the cosmic ray spectrum above the GZK cutoff~\cite{KAMPERT2014318}, it does not claim it to be just due to GZK limit. It has also observed cosmic rays above the GZK cutoff. This issue along with its implications is discussed later in sec.~\ref{subsubsec:CRspectrum}. One of the other consequences arising from the interaction with the CMB is the interaction of high energy photons(gamma rays) to produce electron-positron pairs, $\gamma_{UHECR} + \gamma_{CMB} \longrightarrow e^+ + e^- $. This is an important consequence that alters both the expected UHECR spectrum and the CR spectrum at Earth and also just leaves UHE$\nu$ as one of the only known cosmic ray particles that can point back directly to their sources.
+The mean free path is still of the order of $\sim$10Mpc.
+Even though, the Pierre Auger Observatory observes a suppression in the cosmic ray spectrum above the GZK cutoff~\cite{KAMPERT2014318}, it does not claim it to be just due to GZK limit. It has also observed cosmic rays above the GZK cutoff. This issue along with its implications is discussed later in sec.~\ref{subsubsec:CRspectrum}. One of the other consequences arising from the interaction with the CMB is the interaction of high energy photons(gamma rays) to produce electron-positron pairs, $\gamma_{UHECR} + \gamma_{CMB} \longrightarrow e^+ + e^- $. This is an important consequence that alters both the expected UHECR spectrum and the CR spectrum at Earth and also just leaves neutrinos as one of the only known cosmic ray particles that can point back directly to their sources.
 
-The production of UHE$\nu$ arising from the pions produced during the Photopion interaction is discussed later in sec.~\ref{sec:UHENu} 
+The production of these high energy neutrinos arising from the pions produced during the Photopion interaction is discussed later in sec.~\ref{sec:UHENu} 
 
 \subsection{Latest results}
 \label{subsec:CRresults}
-The study of CRs to constrain their properties and the relevant sources requires measurements on Earth. The measurements which provide valuable information are the energy spectrum or flux observed at Earth, the composition of the primary CRs arriving at Earth, their arrival direction and other relevant observations such as measurement of other messengers such as high energy photons and neutrons. These measurements and their implications are discussed in more detail below. The UHE$\nu_s$, relevant for this thesis are discussed in a separate section. 
+The study of CRs to constrain their properties and the relevant sources requires measurements on Earth. The measurements which provide valuable information are the energy spectrum or flux observed at Earth, the composition of the primary CRs arriving at Earth, their arrival direction and other relevant observations such as measurement of other messengers such as high energy photons and neutrons. These measurements and their implications are discussed in more detail below. The high energy neutrinos, relevant for this thesis are discussed in a separate section. 
 
 \subsubsection*{Cosmic Ray spectrum}
 \label{subsubsec:CRspectrum}
@@ -136,7 +136,7 @@ Summary of the results of photon searches performed at the Pierre Auger Observat
 \subsection{History}
 Neutrino($\nu$)~\cite{10.1063/1.2995181} (neut-neutral, ino-small) is an elementary particle belonging to the fermion class with a 1/2 spin. It was named by Enrico Fermi but first postulated by Pauli in 1930 as an explanation for the conservation of energy, momentum and angular momentum in $\beta$ decays. It rarely reacts in nature and only scatters via weak interaction. The neutrino was first observed in 1956 by the Cowan-Reines neutrino experiment~\cite{PhysRev.92.830} by detecting the annihilation of neutrons and positrons produced by antineutrinos created in a nuclear reactor. Neutrinos can have three flavours electron neutrinos ($\nu_e$), muon neutrinos ($\nu_{\mu}$), or tau neutrinos ($\nu_{\tau}$) depending on the charged lepton (electron, muon or tau) accompanying them in their production. There are various mysteries involved with understanding this "ghost particle". One of these is the phenomenon of neutrino oscillations which is the intermixing of different neutrino flavors as they propagate through space. This has been observed in various experiments such as the Super-Kamiokande Observatory~\cite{Fukuda_1998} and the Sudbury Neutrino Observatories~\cite{BELLERIVE201630} and was the recipient of the 2015 Nobel Prize for Physics since it was the first indication that neutrinos have some mass. This has led to various efforts to determine the mass of the three neutrinos(Under Neutrino Properties~\cite{ParticleDataGroup:2024cfk}). Currently, only a hierarchical differentiation can be established~\cite{Qian_2015}, the configuration of which is also not completely understood, and further experiments like Karlsruhe Tritium Neutrino experiment~\cite{aker2024directneutrinomassmeasurementbased} are underway to solve this mystery. Also, the very mechanisms with which neutrinos can acquire mass are currently not completely understood~\cite{CERN_courier_nu_mass}. 
 Neutrinos arriving at Earth through astrophysical sources such as the Sun have also played an important role in increasing our understanding of CRs and physics in general. The solar neutrino observations ultimately led to the postulation and discovery of neutrino oscillations. The observations of neutrinos from SN 1987A, a type II supernova in the Large Magellanic Cloud by Kamiokande II~\cite{PhysRevLett.58.1490} before the observation of any other messenger marked the dawn of non-solar neutrino astronomy and displayed the importance of neutrinos for multi-messenger physics. One of the most important experiments in this field has been the IceCube Observatory. Located at the South Pole the IceCube Observatory has revolutionised both neutrino and multi-messenger astronomy. It has led to the first detection of astrophysical neutrinos~\cite{PhysRevLett.111.021103} and provided a measurement of their spectrum for high energies~\cite{doi:10.1126/science.1242856}. It has also contributed to the study of the neutrino oscillations\cite{Abbasi_2023_Oscillation} and could also help with $\nu$ mass hierarchy~\cite{psf2023008007}. Recently, IceCube has further found the first source of steady-state neutrinos in our cosmos which is the NGC1068~\cite{Icecube_2022} and has also led to the groundbreaking measurement of the neutrino spectrum from our Galaxy~\cite{Galactic_plane_nu_2023}. These results and their implications are discussed in more detail in section~\ref{subsec:Nuresults}. Its contributions to multi-messenger astronomy are also discussed later in section~\ref{sec:Mul-mes}. For the highest of energies, the Pierre Auger Observatory remains the only facility capable of detecting neutrinos. 
-Neutrinos can help to understand various astrophysical processes such as the Big Bang where the neutrinos are hypothesized to have decoupled 1 second after leading to cosmic neutrino background (CNB)~\cite{scott2024cosmicneutrinobackground} to the nuclear processes inside stellar objects. Each such process speculates a unique neutrino spectrum which can be probed with experiments to garner their viability. Figure~\ref{} shows the unified neutrino spectrum with respect to energy. For this thesis, the following sections are constrained to only the neutrinos of the highest energies(UHE$\nu$) above $10^16$ eV. How neutrinos can help decipher the mysteries of UHECRs is also discussed below.
+Neutrinos can help to understand various astrophysical processes such as the Big Bang where the neutrinos are hypothesized to have decoupled 1 second after leading to cosmic neutrino background (CNB)~\cite{scott2024cosmicneutrinobackground} to the nuclear processes inside stellar objects. Each such process speculates a unique neutrino spectrum which can be probed with experiments to garner their viability. Figure~\ref{} shows the unified neutrino spectrum with respect to energy. For this thesis, the following sections are constrained to only the neutrinos of the highest energies (UHE$\nu_s$) above $10^16$ eV. How neutrinos can help decipher the mysteries of UHECRs is also discussed below.
 
 
 \subsection{Origin and Propagation}
