--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -1780,7 +1780,231 @@ abstract = {In this paper we review air shower data related to the mass composit
   month     = aug,
   pages     = {164}
 }
+@book{heitler1984quantum,
+  title     = {The quantum theory of radiation},
+  author    = {Heitler, Walter},
+  year      = {1984},
+  publisher = {Courier Corporation}
+}
+@article{MATTHEWS2005387,
+  title    = {A Heitler model of extensive air showers},
+  journal  = {Astroparticle Physics},
+  volume   = {22},
+  number   = {5},
+  pages    = {387-397},
+  year     = {2005},
+  issn     = {0927-6505},
+  doi      = {https://doi.org/10.1016/j.astropartphys.2004.09.003},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0927650504001598},
+  author   = {J. Matthews},
+  keywords = {Cosmic rays, Extensive air showers, Simulations},
+  abstract = {A simple, semi-empirical model is used to develop the hadronic portion of air showers in a manner analogous to the well-known Heitler splitting approximation of electromagnetic cascades. Various characteristics of EAS are plainly exhibited with numerical predictions in good accord with detailed Monte Carlo simulations and with data. Results for energy reconstruction, muon and electron sizes, the elongation rate, and for the effects of the atomic number of the primary are discussed.}
+}
+@article{PhysRevD.66.033011,
+  title     = {Hybrid simulations of extensive air showers},
+  author    = {Alvarez-Mu\~niz, Jaime and Engel, Ralph and Gaisser, T. K. and Ortiz, Jeferson A. and Stanev, Todor},
+  journal   = {Phys. Rev. D},
+  volume    = {66},
+  issue     = {3},
+  pages     = {033011},
+  numpages  = {16},
+  year      = {2002},
+  month     = {Aug},
+  publisher = {American Physical Society},
+  doi       = {10.1103/PhysRevD.66.033011},
+  url       = {https://link.aps.org/doi/10.1103/PhysRevD.66.033011}
+}
+@article{Pierog:2006qv,
+  author        = {Pierog, T. and Werner, Klaus},
+  title         = {{Muon Production in Extended Air Shower Simulations}},
+  eprint        = {astro-ph/0611311},
+  archiveprefix = {arXiv},
+  doi           = {10.1103/PhysRevLett.101.171101},
+  journal       = {Phys. Rev. Lett.},
+  volume        = {101},
+  pages         = {171101},
+  year          = {2008}
+}
+@article{Linsley_1977,
+author        = {Linsley, J.},
+title = {Proc. 15th ICRC, Plovdiv},
+year          = {1977},
+volume    = {12},
+pages     = {89},
+}
+@article{Fowler_2001,
+  title     = {A measurement of the cosmic ray spectrum and composition at the knee},
+  volume    = {15},
+  issn      = {0927-6505},
+  url       = {http://dx.doi.org/10.1016/S0927-6505(00)00139-0},
+  doi       = {10.1016/s0927-6505(00)00139-0},
+  number    = {1},
+  journal   = {Astroparticle Physics},
+  publisher = {Elsevier BV},
+  author    = {Fowler, J.W. and Fortson, L.F. and Jui, C.C.H. and Kieda, D.B. and Ong, R.A. and Pryke, C.L. and Sommers, P.},
+  year      = {2001},
+  month     = mar,
+  pages     = {49–64}
+}
+@article{Wibig_2022,
+  title     = {Testing the superposition model in small CORSIKA shower simulations},
+  volume    = {49},
+  issn      = {1361-6471},
+  url       = {http://dx.doi.org/10.1088/1361-6471/ac4da7},
+  doi       = {10.1088/1361-6471/ac4da7},
+  number    = {3},
+  journal   = {Journal of Physics G: Nuclear and Particle Physics},
+  publisher = {IOP Publishing},
+  author    = {Wibig, Tadeusz},
+  year      = {2022},
+  month     = feb,
+  pages     = {035201}
+}
+@article{LI2013503,
+  title    = {Projectile fragmentation of 500AMeV 56Fe in nuclear emulsion},
+  journal  = {Nuclear Instruments and Methods in Physics Research Section B: Beam Interactions with Materials and Atoms},
+  volume   = {307},
+  pages    = {503-506},
+  year     = {2013},
+  note     = {The 18th International Conference on Ion Beam Modifications of Materials (IBMM2012)},
+  issn     = {0168-583X},
+  doi      = {https://doi.org/10.1016/j.nimb.2012.12.068},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0168583X13000657},
+  author   = {Jun-Sheng Li and Dong-Hai Zhang and Hui-Ling Li and N. Yasuda},
+  keywords = {Heavy ion, Fragmentation, Nuclear emulsion},
+  abstract = {N-4 stacks of nuclear emulsion were exposed to 500AMeV 56Fe ions at the HIMAC NIRS. Particle production was investigated in 56Fe–Em interactions. The multiplicity distribution of projectile fragments was done in this paper and compared with interactions induced by 56Fe and other heavy ions in nuclear emulsion at other energies. The variation of characteristics of the heavy ion interactions with the mass and energy of the projectile is studied.}
+}
+@article{Albrecht_2022_muon_puzzle,
+  title     = {The Muon Puzzle in cosmic-ray induced air showers and its connection to the Large Hadron Collider},
+  volume    = {367},
+  issn      = {1572-946X},
+  url       = {http://dx.doi.org/10.1007/s10509-022-04054-5},
+  doi       = {10.1007/s10509-022-04054-5},
+  number    = {3},
+  journal   = {Astrophysics and Space Science},
+  publisher = {Springer Science and Business Media LLC},
+  author    = {Albrecht, Johannes and Cazon, Lorenzo and Dembinski, Hans and Fedynitch, Anatoli and Kampert, Karl-Heinz and Pierog, Tanguy and Rhode, Wolfgang and Soldin, Dennis and Spaan, Bernhard and Ulrich, Ralf and Unger, Michael},
+  year      = {2022},
+  month     = mar
+}
+@article{Landau:1953um,
+  author  = {Landau, L. D. and Pomeranchuk, I.},
+  title   = {{Limits of applicability of the theory of bremsstrahlung electrons and pair production at high-energies}},
+  journal = {Dokl. Akad. Nauk Ser. Fiz.},
+  volume  = {92},
+  pages   = {535--536},
+  year    = {1953}
+}
+@article{PhysRev.103.1811,
+  title     = {Bremsstrahlung and Pair Production in Condensed Media at High Energies},
+  author    = {Migdal, A. B.},
+  journal   = {Phys. Rev.},
+  volume    = {103},
+  issue     = {6},
+  pages     = {1811--1820},
+  numpages  = {0},
+  year      = {1956},
+  month     = {Sep},
+  publisher = {American Physical Society},
+  doi       = {10.1103/PhysRev.103.1811},
+  url       = {https://link.aps.org/doi/10.1103/PhysRev.103.1811}
+}
+@misc{sandrock2023validationelectromagneticshowerscorsika,
+  title         = {Validation of Electromagnetic Showers in CORSIKA 8},
+  author        = {Alexander Sandrock and Jean-Marco Alameddine and Felix Riehn},
+  year          = {2023},
+  eprint        = {2308.07112},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.HE},
+  url           = {https://arxiv.org/abs/2308.07112}
+}
+@misc{1977ICRC....8..353G,
+  author    = {{Gaisser}, T.~K. and {Hillas}, A.~M.},
+  title     = {{Reliability of the Method of Constant Intensity Cuts for Reconstructing the Average Development of Vertical Showers}},
+  keywords  = {Astronomical Models, Cosmic Ray Showers, Error Analysis, Particle Flux Density, Primary Cosmic Rays, Curve Fitting, Parameterization, Particle Intensity, Root-Mean-Square Errors, Space Radiation},
+  booktitle = {International Cosmic Ray Conference},
+  year      = 1977,
+  volume    = {8},
+  month     = jan,
+  pages     = {353},
+  adsurl    = {https://ui.adsabs.harvard.edu/abs/1977ICRC....8..353G},
+  adsnote   = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
+
+@article{annurev:/content/journals/10.1146/annurev.ns.10.120160.000431,
+  author    = {Greisen, K},
+  title     = {Cosmic Ray Showers},
+  journal   = {Annual Review of Nuclear and Particle Science},
+  year      = {1960},
+  volume    = {10},
+  number    = {Volume 10, },
+  pages     = {63-108},
+  doi       = {https://doi.org/10.1146/annurev.ns.10.120160.000431},
+  url       = {https://www.annualreviews.org/content/journals/10.1146/annurev.ns.10.120160.000431},
+  publisher = {Annual Reviews},
+  issn      = {1545-4134},
+  type      = {Journal Article}
+}
+@article{10.1143/PTPS.6.93,
+  author   = {Kamata, Koichi and Nishimura, Jun},
+  title    = {{The Lateral and the Angular Structure Functions of Electron Showers}},
+  journal  = {Progress of Theoretical Physics Supplement},
+  volume   = {6},
+  pages    = {93-155},
+  year     = {1958},
+  month    = {02},
+  abstract = {{Lateral and angular distribution functions of the electron showers are derived analytically with and without the Landau approximation including ionization loss. Tables and the numerical results of these functions are presented, and their results are applied to the analysis of high energy cosmic ray phenomena.Relations between the present theories and the others are discussed critically, and it is shown that the other theories can be regarded as special cases of our theories.}},
+  issn     = {0375-9687},
+  doi      = {10.1143/PTPS.6.93},
+  url      = {https://doi.org/10.1143/PTPS.6.93},
+  eprint   = {https://academic.oup.com/ptps/article-pdf/doi/10.1143/PTPS.6.93/5270594/6-93.pdf}
+}
+@article{A_M_Hillas_1982,
+title = {Angular and energy distributions of charged particles in electron-photon cascades in air},
+author = {A M Hillas},
+journal = {Journal of Physics G: Nuclear Physics},
+doi = {10.1088/0305-4616/8/10/016},
+url = {https://dx.doi.org/10.1088/0305-4616/8/10/016},
+year = {1982},
+month = {oct},
+publisher = {},
+volume = {8},
+number = {10},
+pages = {1461},
+}
+@article{Bridgeman:2017MD,
+  author  = {Bridgeman, Ariel},
+  title   = {{Shower universality reconstruction of data from the Pierre Auger Observatory and validations with hadronic interaction models}},
+  doi     = {10.22323/1.301.0323},
+  journal = {PoS},
+  year    = 2017,
+  volume  = {ICRC2017},
+  pages   = {323}
+}
+@article{Ulrich_2009,
+  doi       = {10.1088/1367-2630/11/6/065018},
+  url       = {https://dx.doi.org/10.1088/1367-2630/11/6/065018},
+  year      = {2009},
+  month     = {jun},
+  publisher = {},
+  volume    = {11},
+  number    = {6},
+  pages     = {065018},
+  author    = {R Ulrich and J Blümer and R Engel and F Schüssler and M Unger},
+  title     = {On the measurement of the proton-air cross section using air shower data},
+  journal   = {New Journal of Physics},
+  abstract  = {The analysis of high-energy air shower data allows one to study the proton-air cross section at energies beyond the reach of fixed target and collider experiments. The mean depth of the first interaction point and its fluctuations are a measure of the proton-air particle production cross section. Since the first interaction point in air cannot be measured directly, various methods have been developed in the past to estimate the depth of the first interaction from air shower observables in combination with simulations. As the simulations depend on assumptions made for hadronic particle production at energies and phase space regions not accessible in accelerator experiments, the derived cross sections are subject to significant systematic uncertainties. The focus of this work is the development of an improved analysis technique that allows a significant reduction of the model dependence of the derived cross section at very high energy. Performing a detailed Monte Carlo study of the potential and the limitations of different measurement methods, we quantify the dependence of the measured cross section on the hadronic interaction model used. Based on these results, a general improvement of the analysis methods is proposed by introducing the actually derived cross section already in the simulation of reference showers. The reduction of the model dependence is demonstrated for one of the measurement methods.}
+}
+@misc{cazon2024protonairinteractionsultrahighenergies,
+  title         = {Proton-air interactions at ultra-high energies in muon-depleted air showers with different depths},
+  author        = {Lorenzo Cazon and Ruben Conceição and Miguel Alexandre Martins and Felix Riehn},
+  year          = {2024},
+  eprint        = {2406.08620},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.HE},
+  url           = {https://arxiv.org/abs/2406.08620}
+}
 @inproceedings{Blobel:2002ax,
   author        = {Blobel, Volker and Kleinwort, Claus},
   title         = {{A New method for the high precision alignment of track
